--- a/src/components/dayPicker/style.scss
+++ b/src/components/dayPicker/style.scss
@@ -17,7 +17,7 @@
     padding: 5px 30px 5px 10px;
     position: relative;
     sup {
-      color: #ddd;
+      color: #d8d9df;
     }
   }
   &__down {
