--- a/src/components/input/style.scss
+++ b/src/components/input/style.scss
@@ -17,7 +17,7 @@
     box-shadow: 0 0 5px rgba(80,129,255,.3);
   }
   &::-webkit-input-placeholder {
-    color: #ddd;
+    color: #d8d9df;
   }
 }
 
