--- a/src/components/select/style.scss
+++ b/src/components/select/style.scss
@@ -18,7 +18,7 @@
     padding: 5px 30px 5px 10px;
     position: relative;
     sup {
-      color: #ddd;
+      color: #d8d9df;
     }
   }
   &--multi {
@@ -77,7 +77,7 @@
       }
     }
     > sup {
-      color: #ddd;
+      color: #d8d9df;
       padding: 0 5px 5px 5px;
     }
   }
