--- a/src/components/dailyItem/style.scss
+++ b/src/components/dailyItem/style.scss
@@ -6,73 +6,85 @@
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
   border-radius: 4px;
   margin-bottom: 15px;
-  padding: 15px;
-  > h2 {
+  > .header {
     display: flex;
-    font-weight: 400;
-    line-height: 20px;
     font-size: 14px;
-    margin-bottom: 8px;
-    color: #8a929b;
+    padding: 15px 15px 0 15px;
+    border-top-left-radius: 4px;
+    border-top-right-radius: 4px;
     a {
-      font-size: 14px;
-      display: block;
+      font-size: 16px;
+      line-height: 20px;
       color: #5081ff;
       font-weight: bold;
       margin-right: 5px;
     }
-    time {
-      display: block;
-      margin-left: 10px;
+    time, span {
+      margin-left: 5px;
+      font-size: 14px;
+      line-height: 20px;
+      color: #8a929b;
     }
   }
 
   .daily-list {
+    padding: 0 15px;
     .item {
-      margin-bottom: 10px;
-      padding-bottom: 10px;
+      padding: 15px 0 10px 0;
       border-bottom: 1px dashed #f7f9fc - 20;
       &:last-child {
-        margin-bottom: 0;
-        padding-bottom: 0;
         border-bottom: none;
+        padding-bottom: 15px;
       }
-      .mission {
-        font-size: 14px;
-        margin-bottom: 5px;
-        span {
+    }
+    .header {
+      font-size: 14px;
+      margin-bottom: 5px;
+      > span {
+        display: block;
+        float: left;
+        width: 14px;
+        height: 14px;
+        margin: 3px 6px 0 0;
+        background: #f7f9fc - 5;
+        border-radius: 50%;
+        overflow: hidden;
+        &:after {
+          content: '';
           display: block;
-          float: left;
-          width: 14px;
-          height: 14px;
-          margin: 3px 5px 0 0;
-          background: #f7f9fc - 5;
-          border-radius: 50%;
-          overflow: hidden;
-          &:after {
-            content: '';
-            display: block;
-            width: 7px;
-            height: 7px;
-            background: #5081ff;
-            margin-left: 7px;
-          }
-        }
-        strong {
-          display: block;
-          float: left;
-          line-height: 20px;
-          color: #ff9900;
+          width: 7px;
+          height: 7px;
+          background: #5081ff;
+          margin-left: 7px;
         }
       }
-      > p {
+      strong {
+        display: block;
+        float: left;
+        line-height: 20px;
+        color: #eb7350;
+        width: 688px;
+        text-align: justify;
+      }
+    }
+    .content {
+      padding: 5px 0;
+      sup {
+        font-size: 12px;
+        line-height: 20px;
+        display: block;
+        float: left;
+        min-width: 20px;
+        overflow: hidden;
+        color: #d8d9df;
+      }
+      p {
+        float: left;
         color: #586069;
         font-size: 14px;
         line-height: 20px;
-        margin-bottom: 5px;
-        &:last-child {
-          margin-bottom: 0;
-        }
+        text-align: justify;
+        width: 688px;
       }
     }
   }
