--- a/src/components/myDailyWriter/style.scss
+++ b/src/components/myDailyWriter/style.scss
@@ -1,60 +1,194 @@
 @charset "utf-8";
 
 .wb-daily-writer {
-  border: 1px solid #dee3e8;
-  background: #fff;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
-  border-radius: 4px;
-  margin-bottom: 15px;
-  position: relative;
+
+  > .icon {
+    display: block;
+    float: left;
+    margin-right: 10px;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    background: #6495ff;
+  }
+
+  > .content {
+    float: left;
+    width: 740px;
+    border: 1px solid #dee3e8;
+    background: #fff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
+    border-radius: 4px;
+    margin-bottom: 15px;
+  }
 
   .daily-list {
-    padding: 15px;
     border-bottom: 1px solid #f7f9fc - 10;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
+    padding: 0 15px;
     .item {
-      margin-bottom: 10px;
-      padding-bottom: 10px;
+      padding: 15px 0 10px 0;
       border-bottom: 1px dashed #f7f9fc - 20;
       &:last-child {
-        margin-bottom: 0;
-        padding-bottom: 0;
         border-bottom: none;
+        padding-bottom: 15px;
       }
-      .mission {
-        font-size: 14px;
-        margin-bottom: 5px;
-        span {
+    }
+    .header {
+      font-size: 14px;
+      margin-bottom: 5px;
+      > span {
+        display: block;
+        float: left;
+        width: 14px;
+        height: 14px;
+        margin: 3px 6px 0 0;
+        background: #f7f9fc - 5;
+        border-radius: 50%;
+        overflow: hidden;
+        &:after {
+          content: '';
           display: block;
-          float: left;
-          width: 14px;
-          height: 14px;
-          margin: 3px 5px 0 0;
-          background: #f7f9fc - 5;
-          border-radius: 50%;
-          overflow: hidden;
-          &:after {
-            content: '';
-            display: block;
-            width: 7px;
-            height: 7px;
-            background: #5081ff;
-            margin-left: 7px;
+          width: 7px;
+          height: 7px;
+          background: #5081ff;
+          margin-left: 7px;
+        }
+      }
+      strong {
+        display: block;
+        float: left;
+        line-height: 20px;
+        color: #eb7350;
+        width: 550px;
+        text-align: justify;
+      }
+      .progress {
+        display: none;
+        float: right;
+        font-size: 12px;
+        line-height: 20px;
+        color: #d8d9df;
+        em {
+          color: #8a929b;
+        }
+        a {
+          float: right;
+          display: block;
+          &:hover svg {
+            fill: #5081ff;
           }
         }
-        strong {
+        svg {
           display: block;
-          float: left;
-          line-height: 20px;
-          color: #ff9900;
+          width: 14px;
+          height: 14px;
+          margin: 3px;
+          fill: #8a929b;
         }
       }
-      > p {
+      &:hover {
+        .progress {
+          display: block;
+        }
+      }
+    }
+    .content {
+      padding: 5px 0;
+      &:hover {
+        background: #f7f9fc;
+        margin: 0 -5px;
+        padding: 5px;
+        border-radius: 3px;
+        .tools {
+          display: block;
+        }
+      }
+      sup {
+        font-size: 12px;
+        line-height: 20px;
+        display: block;
+        float: left;
+        min-width: 20px;
+        overflow: hidden;
+        color: #d8d9df;
+      }
+      p {
+        float: left;
         color: #586069;
         font-size: 14px;
         line-height: 20px;
-        margin-bottom: 5px;
-        &:last-child {
-          margin-bottom: 0;
+        text-align: justify;
+        width: 600px;
+      }
+    }
+    .edit-content {
+      margin: 0 0 10px 0 !important;
+      padding: 0;
+      &:last-child {
+        margin: 0 !important;
+      }
+      sup {
+        margin-top: 5px;
+      }
+      &:hover {
+        padding: 0;
+        background: none;
+      }
+      .rewrite-input {
+        float: left;
+        width: 688px;
+        margin-bottom: 10px;
+      }
+      .rewrite-btns {
+        width: 100%;
+        .wb-button {
+          float: right;
+          margin-left: 10px;
+          height: 32px;
+        }
+      }
+    }
+    .delete-content {
+      background: #f7f9fc;
+      margin: 0 -5px;
+      padding: 5px;
+      border-radius: 3px;
+      .tools {
+        display: block;
+        margin: -1px -1px 0 0;
+        .wb-button {
+          float: right;
+          padding: 4px;
+          margin-left: 4px;
+        }
+      }
+    }
+    .tools {
+      display: none;
+      width: 80px;
+      height: 20px;
+      float: right;
+      svg {
+        display: block;
+        width: 14px;
+        height: 14px;
+        margin: 3px;
+        fill: #a8b0b9;
+      }
+      a {
+        width: 20px;
+        height: 20px;
+        float: right;
+        margin-left: 5px;
+        display: block;
+        &:hover {
+          svg {
+            fill: #5081ff;
+          }
+        }
+        &.del:hover svg {
+          fill: #ff3300;
         }
       }
     }
@@ -70,6 +204,7 @@
     margin-bottom: 10px;
   }
 
+  // 操作栏
   .tools {
     .missions {
       float: left;
@@ -121,7 +256,14 @@
           &.wb-select__list-active {
             background: #5081ff;
             color: #fff;
+            span {
+              color: #fff;
+            }
           }
+        }
+        span {
+          color: #a8b0b9;
+          padding-left: 3px;
         }
       }
     }
@@ -129,6 +271,5 @@
       float: right;
     }
   }
-
 
 }
