--- a/src/containers/mainDailyList/style.scss
+++ b/src/containers/mainDailyList/style.scss
@@ -1,16 +1,14 @@
 @charset "utf-8";
 
 .wb-main-daily-list {
-  > .daily-item {
+  > .row {
     .wb-user-header {
       float: left;
-      width: 60px;
-      height: 60px;
-      margin-right: 15px;
+      margin-right: 10px;
     }
     .wb-daily-item {
       float: left;
-      width: 735px;
+      width: 740px;
     }
   }
 }
