--- a/src/components/missionItem/style.scss
+++ b/src/components/missionItem/style.scss
@@ -48,22 +48,10 @@
     line-height: 1.5;
     text-align: justify;
   }
-  > .progress {
-    width: 60px;
-    height: 4px;
+  .wb-progress {
     position: absolute;
     right: 10px;
-    top: 20px;
-    background: #33b40030;
-    border-radius: 3px;
-    overflow: hidden;
-    span {
-      display: block;
-      width: 50%;
-      height: 100%;
-      border-radius: 3px;
-      background: #33b400;
-    }
+    top: 12px;
   }
   > .footer {
     border-top: 1px solid #dee3e8;
