--- a/src/components/tips/style.scss
+++ b/src/components/tips/style.scss
@@ -28,8 +28,8 @@
     position: absolute;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
+    right: 0;
+    bottom: 0;
     background: #000;
     border-radius: 4px;
     opacity: 0.8;
@@ -38,10 +38,9 @@
       display: block;
       position: absolute;
       left: 50%;
-      margin-left: -2px;
       bottom: -3px;
       border: 4px solid #000;
-      transform: rotate(-45deg);
+      transform: translate(-50%, 0) rotate(-45deg);
       width: 0;
       height: 0;
     }
