--- a/src/views/chartDepartment/style.scss
+++ b/src/views/chartDepartment/style.scss
@@ -1,10 +1,17 @@
 
-.view-group-chart {
-  .app-body {
-    display: block;
-  }
+.view-department-chart {
 
-  .group-chart {
+  .summary {
+    background: #fff;
+    padding: 20px 0 20px;
+    margin: 0 -1600px 20px -1600px;
+    border-bottom: 1px solid #dee3e8;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
+    > .inner {
+      width: 1128px;
+      margin: 0 auto;
+    }
+
     header {
       display: flex;
       align-items: center;
@@ -19,7 +26,7 @@
     .chart {
       display: flex;
       > ul {
-        margin-right: 10px;
+        width: 20px;
         font-size: 12px;
         color: #a8b0b9;
         display: flex;
@@ -65,25 +72,23 @@
         span {
           display: block;
           width: 100%;
-          height: 40px;
           background: #5081ff;
         }
         sub {
           display: block;
           width: 100%;
-          height: 10px;
           background: #ff9900;
         }
         sup {
           display: block;
           width: 100%;
-          height: 20px;
           background: rgb(134, 218, 115);
         }
       }
     }
     .user {
       padding-top: 10px;
+      padding-left: 20px;
       display: flex;
       width: 100%;
       span {
