--- a/src/views/chart/style.scss
+++ b/src/views/chart/style.scss
@@ -1,18 +1,71 @@
 
 .view-chart {
-  .app-body {
-    display: block;
-    padding-top: 20px;
-  }
-}
+  padding-top: 20px;
 
-.dialog {
-  .inner {
-    background: #fff;
-    position: absolute;
-    right: 0;
-    top: 0;
-    width: 360px;
-    height: 100%;
+  > .chart-title {
+    margin-bottom: 15px;
+    h1 {
+      font-size: 18px;
+      line-height: 20px;
+      font-weight: bold;
+    }
+  }
+
+  .projects-chart {
+    margin-right: -15px;
+    > .panel {
+      border: 1px solid #dee3e8;
+      background: #fff;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
+      border-radius: 4px;
+      padding: 15px;
+      width: 366px;
+      margin: 0 15px 15px 0;
+      float: left;
+    }
+  }
+
+  .departments-chart {
+    margin-right: -15px;
+    > .panel {
+      border: 1px solid #dee3e8;
+      background: #fff;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
+      border-radius: 4px;
+      padding: 15px 15px 0 15px;
+      width: 366px;
+      margin: 0 15px 15px 0;
+      float: left;
+      .header {
+        margin-bottom: 10px;
+        h2 {
+          float: left;
+          font-size: 16px;
+          line-height: 20px;
+          font-weight: bold;
+          color: #222;
+        }
+        span {
+          float: right;
+          font-size: 14px;
+          line-height: 20px;
+          color: #a8b0b9;
+        }
+      }
+      .chart {
+        width: 100%;
+        height: 200px;
+        line-height: 200px;
+        text-align: center;
+        font-size: 12px;
+        color: #d8d9df;
+        margin-bottom: 10px;
+      }
+      .detail {
+        display: block;
+        width: 100px;
+        margin: 0 auto 15px auto;
+      }
+    }
   }
 }
