--- a/src/views/chartDepartment/style.scss
+++ b/src/views/chartDepartment/style.scss
@@ -3,7 +3,7 @@
 
   .summary {
     background: #fff;
-    padding: 20px 0 20px;
+    padding: 20px 0 10px 0;
     margin: 0 -1600px 20px -1600px;
     border-bottom: 1px solid #dee3e8;
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
@@ -13,89 +13,23 @@
     }
 
     header {
-      display: flex;
-      align-items: center;
+      display: block;
+      overflow: hidden;
       margin-bottom: 15px;
       h1 {
         font-size: 18px;
         line-height: 20px;
         font-weight: 700;
-        flex: 1;
+        float: left;
+        margin-right: 10px;
+        color: #222;
       }
-    }
-    .chart {
-      display: flex;
-      > ul {
-        width: 20px;
-        font-size: 12px;
-        color: #a8b0b9;
-        display: flex;
-        flex-direction: column;
-        li {
-          flex: 1;
-          display: flex;
-          align-items: flex-end;
-        }
-      }
-    }
-    .chart-pic {
-      position: relative;
-      ul {
-        position: absolute;
-        left: 0;
-        top: 0;
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-direction: column;
-        li {
-          flex: 1;
-          display: flex;
-          border-top: 1px dashed #dee3e8;
-        }
-      }
-      width: 100%;
-      height: 140px;
-      text-align: center;
-      line-height: 140px;
-      border-left: 1px solid #f7f9fc - 20;
-      border-bottom: 1px solid #f7f9fc - 20;
-      color: #d0d8e1;
-      font-size: 12px;
-      display: flex;
-      align-items: flex-end;
-      justify-content: space-around;
-      div {
-        position: relative;
-        z-index: 2;
-        width: 20px;
-        span {
-          display: block;
-          width: 100%;
-          background: #5081ff;
-        }
-        sub {
-          display: block;
-          width: 100%;
-          background: #ff9900;
-        }
-        sup {
-          display: block;
-          width: 100%;
-          background: rgb(134, 218, 115);
-        }
-      }
-    }
-    .user {
-      padding-top: 10px;
-      padding-left: 20px;
-      display: flex;
-      width: 100%;
       span {
-        flex: 1;
-        font-size: 10px;
+        display: block;
+        float: left;
+        font-size: 14px;
+        line-height: 20px;
         color: #a8b0b9;
-        text-align: center;
       }
     }
   }
