--- a/src/components/myDailyWriter/style.scss
+++ b/src/components/myDailyWriter/style.scss
@@ -192,6 +192,12 @@
         margin-left: 5px;
       }
     }
+    .empty {
+      text-align: center;
+      line-height: 150px;
+      font-size: 14px;
+      color: #d8d9df;
+    }
   }
 
   .writer-box {
