--- a/src/views/chart/style.scss
+++ b/src/views/chart/style.scss
@@ -2,7 +2,40 @@
 .view-chart {
   padding-top: 20px;
 
-  > .chart-title {
+  .wb-pager {
+    justify-content: center;
+  }
+
+  > .chart-tabs {
+    border: 1px solid #dee3e8;
+    background: #fff;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
+    border-radius: 4px;
+    width: 302px;
+    height: 42px;
+    margin: 0 auto 15px auto;
+    overflow: hidden;
+    a {
+      display: block;
+      float: left;
+      width: 150px;
+      height: 40px;
+      line-height: 40px;
+      text-align: center;
+      font-size: 14px;
+      color: #586069;
+      &:hover {
+        color: #5081ff;
+      }
+      &.active {
+        background: #f7f9fc;
+        color: #5081ff;
+        font-weight: bold;
+      }
+    }
+  }
+
+  .chart-title {
     margin-bottom: 15px;
     h1 {
       font-size: 18px;
@@ -13,59 +46,17 @@
 
   .projects-chart {
     margin-right: -15px;
-    > .panel {
-      border: 1px solid #dee3e8;
-      background: #fff;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
-      border-radius: 4px;
-      padding: 15px;
-      width: 366px;
-      margin: 0 15px 15px 0;
+    .wb-pie-chart-project {
       float: left;
+      margin: 0 15px 15px 0;
     }
   }
 
   .departments-chart {
     margin-right: -15px;
-    > .panel {
-      border: 1px solid #dee3e8;
-      background: #fff;
-      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
-      border-radius: 4px;
-      padding: 15px 15px 0 15px;
-      width: 366px;
-      margin: 0 15px 15px 0;
+    .wb-pie-chart-department {
       float: left;
-      .header {
-        margin-bottom: 10px;
-        h2 {
-          float: left;
-          font-size: 16px;
-          line-height: 20px;
-          font-weight: bold;
-          color: #222;
-        }
-        span {
-          float: right;
-          font-size: 14px;
-          line-height: 20px;
-          color: #a8b0b9;
-        }
-      }
-      .chart {
-        width: 100%;
-        height: 200px;
-        line-height: 200px;
-        text-align: center;
-        font-size: 12px;
-        color: #d8d9df;
-        margin-bottom: 10px;
-      }
-      .detail {
-        display: block;
-        width: 100px;
-        margin: 0 auto 15px auto;
-      }
+      margin: 0 15px 15px 0;
     }
   }
 }
