--- a/src/views/chartProject/style.scss
+++ b/src/views/chartProject/style.scss
@@ -1,30 +1,36 @@
 
 .view-project-chart {
-  .app-body {
-    display: block;
-  }
 
-  .project-chart {
-    header {
-      display: flex;
-      align-items: center;
+  .summary {
+    background: #fff;
+    padding: 20px 0 10px 0;
+    margin: 0 -1600px 20px -1600px;
+    border-bottom: 1px solid #dee3e8;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
+    > .inner {
+      width: 1128px;
+      margin: 0 auto;
+    }
+
+    .header {
+      display: block;
+      overflow: hidden;
       margin-bottom: 15px;
       h1 {
         font-size: 18px;
         line-height: 20px;
         font-weight: 700;
-        flex: 1;
+        float: left;
+        margin-right: 10px;
+        color: #222;
       }
-    }
-    .chart {
-      width: 100%;
-      height: 140px;
-      text-align: center;
-      line-height: 140px;
-      border-left: 1px solid #f7f9fc - 20;
-      border-bottom: 1px solid #f7f9fc - 20;
-      color: #d0d8e1;
-      font-size: 12px;
+      span {
+        display: block;
+        float: left;
+        font-size: 14px;
+        line-height: 20px;
+        color: #a8b0b9;
+      }
     }
   }
 
@@ -34,70 +40,37 @@
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
     border-radius: 4px;
     margin-bottom: 15px;
-    padding: 15px;
-    > header {
-      display: flex;
-      align-items: center;
+    padding: 15px 15px 0 15px;
+    > .header {
+      display: block;
+      overflow: hidden;
       margin-bottom: 15px;
-      padding-bottom: 10px;
-      border-bottom: 1px dashed #dee3e8;
       h2 {
         font-size: 18px;
         line-height: 20px;
         font-weight: 700;
-        margin-right: 10px;
+        float: left;
+        color: #222;
       }
-      .progress {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
+      > .user {
+        float: right;
+        line-height: 1.5;
         p {
-          color: #a8b0b9;
-          font-size: 12px;
-          margin-bottom: 5px;
-        }
-        em {
-          width: 90px;
-          height: 3px;
-          background: #f7f9fc - 10;
+          display: block;
+          font-size: 14px;
+          text-align: right;
+          color: #586069;
         }
         span {
           display: block;
-          height: 100%;
-          width: 76%;
-          background: #33b400;
+          color: #a8b0b9;
+          font-size: 12px;
+          font-weight: normal;
         }
       }
     }
-    > .users {
-      display: flex;
-      margin-bottom: 15px;
-      padding-left: 5px;
-      sub {
-        width: 8px;
-        height: 8px;
-        display: block;
-        background: #5081ff;
-        margin-right: 8px;
-        border-radius: 50%;
-      }
-      .user {
-        margin-right: 20px;
-        display: flex;
-        align-items: center;
-      }
-      p {
-        font-size: 14px;
-        margin-right: 5px;
-      }
-      span, strong {
-        color: #a8b0b9;
-        font-size: 12px;
-        font-weight: normal;
-        margin-right: 5px;
-      }
-    }
+
+
     > .chart {
       width: 100%;
       height: 140px;
