--- a/src/components/select/style.scss
+++ b/src/components/select/style.scss
@@ -139,6 +139,7 @@
       &.wb-select__list-active {
         color: #5081ff;
         font-weight: bold;
+        padding-right: 25px;
       }
       &.wb-select__list-none {
         color: #a8b0b9 !important;
