--- a/src/components/missionItem/style.scss
+++ b/src/components/missionItem/style.scss
@@ -2,7 +2,7 @@
 .wb-mission-item {
   position: relative;
   width: 366px;
-  // height: 140px;
+  height: 100px;
   border-radius: 4px;
   border: 1px solid #dee3e8;
   background: #fff;
@@ -32,46 +32,30 @@
       }
     }
   }
-  > h3 {
-    padding: 0 10px 5px 10px;
-    margin-bottom: 10px;
-    color: #a8b0b9;
-    font-size: 12px;
-    line-height: 1.5;
-    border-bottom: 1px solid #dee3e8 + 15;
-  }
-  > .description {
-    padding: 0 10px;
-    margin-bottom: 10px;
-    color: #586069;
-    font-size: 14px;
-    line-height: 1.5;
-    text-align: justify;
+  > footer {
+    padding: 10px;
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    overflow: hidden;
+    p {
+      font-size: 12px;
+      line-height: 1.5;
+      float: left;
+      color: #a8b0b9;
+      span {
+        color: #8a929b;
+        margin-right: 5px;
+      }
+    }
+    p:last-child {
+      float: right;
+    }
   }
   .wb-progress {
     position: absolute;
     right: 10px;
     top: 12px;
-  }
-  > .footer {
-    border-top: 1px solid #dee3e8;
-    background: #f7f9fc;
-    padding: 0 10px;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    overflow: hidden;
-    p {
-      float: left;
-      color: #a8b0b9;
-      font-size: 12px;
-      line-height: 36px;
-      &:last-child {
-        float: right;
-      }
-      span {
-        color: #8a929b;
-        padding-right: 4px;
-      }
-    }
   }
 }
