--- a/src/components/pieChartProject/style.scss
+++ b/src/components/pieChartProject/style.scss
@@ -48,6 +48,9 @@
       padding-right: 5px;
       font-weight: normal;
     }
+    .delay {
+      color: #ff6600;
+    }
   }
   .detail {
     display: block;
