--- a/src/views/chartProjectDetail/style.scss
+++ b/src/views/chartProjectDetail/style.scss
@@ -43,7 +43,7 @@
         p {
           margin-right: 5px;
           color: #a8b0b9;
-          &.delay {
+          &.timeout {
             color: #ff6600;
           }
         }
