--- a/src/components/pieChartProject/style.scss
+++ b/src/components/pieChartProject/style.scss
@@ -1,6 +1,4 @@
 
-
-
 .wb-pie-chart-project {
   border: 1px solid #dee3e8;
   background: #fff;
@@ -56,7 +54,7 @@
   }
   &.timeout {
     .info {
-      .delay {
+      .timeout {
         color: #ff6600;
       }
     }
