--- a/src/components/projectItem/style.scss
+++ b/src/components/projectItem/style.scss
@@ -143,6 +143,12 @@
           margin-bottom: 2px;
           padding-right: 50px;
         }
+        span {
+          color: #ff6600;
+          font-weight: normal;
+          font-size: 12px;
+          margin-right: 5px;
+        }
         time {
           display: block;
           color: #a8b0b9;
