--- a/src/components/loading/style.scss
+++ b/src/components/loading/style.scss
@@ -1,14 +1,22 @@
 
 .wb-loading {
   position: fixed;
-  right: 20px;
-  top: 20px;
-  width: 40px;
-  height: 40px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 2px;
   z-index: 9999999;
   &__inner {
-    background: #f0f;
-    width: 40px;
-    height: 40px;
+    width: 100%;
+    height: 100%;
+    background: #5081ff;
+    box-shadow: 0 0 5px #00c3ff;
+    transform: translate(-100%, 0);
+    transition: transform 1s ease-out;
+  }
+  &--ani {
+    .wb-loading__inner {
+      transform: translate(0, 0);
+    }
   }
 }
