--- a/src/views/chartDepartmentDetail/style.scss
+++ b/src/views/chartDepartmentDetail/style.scss
@@ -40,111 +40,90 @@
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.03);
     border-radius: 4px;
     margin-bottom: 15px;
-    padding: 15px;
-    > header {
-      display: flex;
-      align-items: center;
+    padding: 15px 15px 0 15px;
+    > .header {
       margin-bottom: 15px;
-      padding-bottom: 10px;
-      border-bottom: 1px dashed #dee3e8;
-      h2 {
-        font-size: 18px;
-        line-height: 20px;
-        font-weight: 700;
+      .wb-user-header {
+        float: left;
         margin-right: 10px;
+        width: 40px;
+        height: 40px;
       }
-      > span {
-        color: #a8b0b9;
-        font-size: 14px;
-      }
-      .wait {
-        flex: 1;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        p {
-          color: #a8b0b9;
-          font-size: 12px;
-          margin-bottom: 5px;
-        }
-      }
-    }
-    > .missions {
-      display: flex;
-      margin-bottom: 15px;
-      padding-left: 5px;
-      sub {
-        width: 8px;
-        height: 8px;
-        display: block;
-        background: #5081ff;
-        border-radius: 50%;
-        margin: 6px 8px 0 0;
-      }
-      .mission {
-        margin-right: 20px;
-        display: flex;
-      }
-      p {
-        font-size: 14px;
-        margin-right: 5px;
-        line-height: 20px;
-      }
-      span {
-        display: block;
-        line-height: 1.5;
-        color: #a8b0b9;
-        font-size: 12px;
-        font-weight: normal;
-        margin-right: 5px;
-      }
-    }
-    > .chart {
-      width: 100%;
-      text-align: center;
-      border: 1px solid #dee3e8;
-      color: #d0d8e1;
-      font-size: 12px;
-      .row {
-        padding: 1px;
-        height: 21px;
-        display: flex;
-        align-items: center;
-        &:not(:first-child) {
-          border-top: 1px dashed #dee3e8;
+      .info {
+        float: left;
+        h2 {
+          font-size: 16px;
+          line-height: 1.5;
+          font-weight: 700;
+          color: #222;
+          margin-bottom: 2px;
         }
         span {
           display: block;
-          height: 3px;
-          position: relative;
-        }
-        sup {
-          display: block;
-          position: absolute;
-          top: -3px;
-          height: 2px;
-          background: #feb5cc;
-          right: 0;
-        }
-        sub {
-          display: block;
-          position: absolute;
-          bottom: -3px;
-          height: 2px;
-          background: #eb7350;
-          right: 0;
+          font-size: 12px;
+          line-height: 1.2;
+          color: #a8b0b9;
         }
       }
     }
-    > .date {
-      padding-top: 10px;
-      display: flex;
-      width: 100%;
-      span {
-        flex: 1;
-        font-size: 10px;
-        color: #a8b0b9;
-        text-align: center;
+    > .empty {
+      line-height: 100px;
+      height: 150px;
+      text-align: center;
+      font-size: 14px;
+      color: #d8d9df;
+    }
+    > .missions {
+      margin-right: -15px;
+      > .item {
+        width: 540px;
+        float: left;
+        margin: 0 15px 15px 0;
+        background: #f7f9fc;
+        padding: 15px;
+        border-radius: 4px;
+        > div {
+          position: relative;
+          padding-top: 15px;
+          background: #fff;
+          border-radius: 4px;
+          overflow: hidden;
+          height: 150px;
+          &.empty {
+            padding-top: 0;
+            line-height: 150px;
+            text-align: center;
+            font-size: 14px;
+            color: #d8d9df;
+          }
+        }
+        .header {
+          margin-bottom: 10px;
+          .name {
+            float: left;
+          }
+          .info {
+            float: right;
+          }
+          h3 {
+            font-size: 16px;
+            font-weight: bold;
+            line-height: 22px;
+          }
+          p {
+            display: block;
+            font-size: 14px;
+            line-height: 18px;
+            color: #586069;
+          }
+          span, time {
+            display: block;
+            font-size: 12px;
+            line-height: 20px;
+            color: #a8b0b9;
+            text-align: right;
+          }
+        }
       }
     }
   }
