--- a/src/views/chartProjectDetail/style.scss
+++ b/src/views/chartProjectDetail/style.scss
@@ -31,6 +31,23 @@
         line-height: 20px;
         color: #a8b0b9;
       }
+      .deadline {
+        float: right;
+        overflow: hidden;
+        p, time {
+          float: left;
+          font-size: 14px;
+          line-height: 20px;
+          color: #586069;
+        }
+        p {
+          margin-right: 5px;
+          color: #a8b0b9;
+          &.timeout {
+            color: #ff6600;
+          }
+        }
+      }
     }
   }
 
@@ -45,27 +62,26 @@
       display: block;
       overflow: hidden;
       margin-bottom: 15px;
-      h2 {
-        font-size: 18px;
-        line-height: 20px;
-        font-weight: 700;
+      .wb-user-header {
         float: left;
-        color: #222;
+        width: 40px;
+        height: 40px;
+        margin-right: 10px;
       }
-      > .user {
-        float: right;
-        line-height: 1.5;
-        p {
-          display: block;
-          font-size: 14px;
-          text-align: right;
-          color: #586069;
+      .info {
+        float: left;
+        h2 {
+          font-size: 16px;
+          line-height: 1.5;
+          font-weight: 700;
+          color: #222;
+          margin-bottom: 2px;
         }
-        span {
+        time {
           display: block;
-          color: #a8b0b9;
           font-size: 12px;
-          font-weight: normal;
+          line-height: 1.2;
+          color: #a8b0b9;
         }
       }
     }
