--- a/src/views/index/style.scss
+++ b/src/views/index/style.scss
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 .view-index {
-  > .header-missions {
+  > .owns-mission-list {
     background: #fff;
     padding: 20px 0 5px 0;
     margin: 0 -1600px 20px -1600px;
@@ -10,12 +10,23 @@
     > .inner {
       width: 1128px;
       margin: 0 auto;
-      > header {
+      > .header {
         margin-bottom: 15px;
         h1 {
+          float: left;
           font-size: 18px;
           line-height: 20px;
           font-weight: 700;
+        }
+        span {
+          float: right;
+          line-height: 20px;
+          font-size: 12px;
+          color: #a8b0b9;
+        }
+        a {
+          color: #5081ff;
+          margin-left: 5px;
         }
       }
       .list {
@@ -24,6 +35,24 @@
           margin: 0 15px 15px 0;
           float: left;
         }
+      }
+      .footer {
+        clear: both;
+        margin-bottom: 10px;
+        text-align: center;
+        position: relative;
+        height: 20px;
+        overflow: hidden;
+        &:after {
+          position: absolute;
+          left: 0;
+          top: 50%;
+          content: '';
+          display: block;
+          width: 100%;
+          height: 0;
+        }
+
       }
     }
   }
