--- a/src/views/login/style.scss
+++ b/src/views/login/style.scss
@@ -1,13 +1,48 @@
 @charset "utf-8";
 
 .view-login {
-  padding: 40px;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #f7f9fc;
+
   form {
-    width: 300px;
-    padding: 20px;
-    border: 1px solid #a8b0b9;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: 2;
+    margin: -175px 0 0 -250px;
+    border-radius: 4px;
+    width: 500px;
+    background: #fff;
+    box-shadow: 0 5px 35px rgba(0,39,61,0.05);
+    height: 300px;
+    padding: 40px 50px 30px 20px;
+    .logo {
+      width: 195px;
+      height: 27px;
+      background: url('../../assets/imgs/logo.png');
+      background-size: 100% 100%;
+      margin: 0 auto 30px auto;
+    }
   }
-  .wb-input {
+
+  .row {
+    display: flex;
+    align-items: center;
     margin-bottom: 15px;
+    label {
+      display: block;
+      margin-right: 10px;
+      text-align: right;
+      width: 100px;
+      font-size: 14px;
+      color: #586069 + 50;
+    }
+    input {
+      flex: 1;
+    }
   }
+
+
 }
