--- a/src/components/myDailyWriter/style.scss
+++ b/src/components/myDailyWriter/style.scss
@@ -10,6 +10,12 @@
     width: 60px;
     height: 60px;
     background: #6495ff;
+    svg {
+      width: 26px;
+      height: 26px;
+      fill: #fff;
+      margin: 17px;
+    }
   }
 
   > .content {
@@ -38,23 +44,10 @@
     .header {
       font-size: 14px;
       margin-bottom: 5px;
-      > span {
+      > .wb-progress {
         display: block;
         float: left;
-        width: 14px;
-        height: 14px;
-        margin: 3px 6px 0 0;
-        background: #f7f9fc - 5;
-        border-radius: 50%;
-        overflow: hidden;
-        &:after {
-          content: '';
-          display: block;
-          width: 7px;
-          height: 7px;
-          background: #5081ff;
-          margin-left: 7px;
-        }
+        margin: 0 6px 0 0;
       }
       strong {
         display: block;
